# HH_GATEWAY

./: .gitignore  .gitmodules  CMakeLists.txt  docker-compose.yml
benchmarks/: CMakeLists.txt  main.cpp
broker/: Dockerfile
cmake/: FindODB.cmake
conan/ECM/: conanfile.py
core/: CMakeLists.txt
core/http/client/: httpclientinterface.h
core/logger/: logger.cpp
core/mqtt/: actionlistener.cpp  actionlistener.h  asyncpublish.cpp  asyncpublish.h  asyncsubscribe.h  callbackimpl.cpp  callbackimpl.h
examples/: CMakeLists.txt
examples/CRUD/: main.cpp
examples/Database/: CMakeLists.txt  database.hxx  driver.cxx  employee.hxx  main.cpp  userdao.cpp  userdao.h
examples/Gateway/: CMakeLists.txt  main.cpp
examples/HttpClient/: CMakeLists.txt  main.cpp
examples/Logger/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  configmanager.cpp  configmanager.h
src/controller/: gatewaycontroller.cpp  gatewaycontroller.h
src/dao/: nodedao.h  nodedaoimpl.cpp  nodedaoimpl.h
src/dbacess/: entitymanager.h
src/entity/: bool.hxx  database.hxx  datetime.hxx  node.hxx  sensordata.hxx  traits-pgsql.hxx
src/http/client/: httpclientimpl.cpp  httpclientimpl.h
src/logger/: logger.cpp  logger.h
src/mqtt/: asyncpublish.cpp  asyncpublish.h  asyncsubscribe.cpp  asyncsubscribe.h
src/service/: collectorservice.cpp  collectorservice.h  keepaliveservice.cpp  keepaliveservice.h  registerservice.cpp  registerservice.h
tests/: CMakeLists.txt  httpclienttest.cpp  httpclienttest.h
